compiler/typ/tests/fixtures/diagnostics/0905_gadt_packed_branch_result_mismatch_05.ml.infer.expected
File "0905_gadt_packed_branch_result_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0905_gadt_packed_branch_result_mismatch_05 is not a valid module name.

File "0905_gadt_packed_branch_result_mismatch_05.ml", line 9, characters 37-38:
9 |   | Pack_epsilon (Bool_epsilon b) -> b
                                         ^
Error: The value b has type bool but an expression was expected of type int
